--- a/app/client/enen/index/main.less
+++ b/app/client/enen/index/main.less
@@ -1,5 +1,5 @@
-@import "../common.less";
-@import "../keyframes.less";
+@import "../../gallery/common.less";
+@import "../../gallery/keyframes.less";
 
 
 body{
