--- a/app/view/enen/article.jade
+++ b/app/view/enen/article.jade
@@ -1,2 +1,6 @@
-h1 #{title}
-!{content}
+extends layouts/page
+block content
+    .central
+        h1 #{title}
+        #markdown
+            !{content}
