add login module

--- a/app/client/gallery/common.less
+++ b/app/client/gallery/common.less
@@ -85,3 +85,11 @@ ol li{
 ::-webkit-scrollbar-thumb:active {
     background: @color1;
 }
+
+
+.save,.cancel{bottom:10px;width:220px;height:45px;color:#fff;border:none;font-size:16.5px;-webkit-transition: 0.25s;-moz-transition: 0.25s;-o-transition: 0.25s;transition: 0.25s;border-radius:6px;}
+
+
+.save{background:@color1;}
+.save:hover{background-color: #ec7063;}
+.save:active{background-color: #dc2d1b;}
