--- a/app/view/enen/admin.jade
+++ b/app/view/enen/admin.jade
@@ -3,4 +3,5 @@ block content
     input#title
     #editor
     #markdown
-    button#save Commit Changes
+    button#save.save Commit Changes
+    button#cancel.cancel Cancel
