--- a/app/client/enen/admin/main.less
+++ b/app/client/enen/admin/main.less
@@ -1,38 +1,21 @@
 @import "../../gallery/common.less";
 @import "../../gallery/markdown.less";
 
-#body{height: 100%;overflow: hidden;}
-#content{height: 100%;overflow: hidden;}
-#editor{position: absolute;top: 0;left: 0;right: 710px;}
-#markdown{position: absolute;top: 0;bottom: 0;right: 0;padding: 15px;}
-#save{position:absolute;bottom:0;width:220px;background:@color1;
+#body,#content{height: 100%;overflow: hidden;}
+
+#editor,#markdown,#save,#cancel{position:absolute;}
+
+#editor,#markdown{top:0;width:50%;word-wrap:break-word;}
+#editor{left:0;right:710px;height:100%;}
+#markdown{bottom:0;right: 0;padding:10px 0;}
+#markdown *{padding:0 10px;}
 
 
-border: none;
-  color: white;
-  font-size: 16.5px;
-  text-decoration: none;
-  text-shadow: none;
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
-  box-shadow: none;
-  -webkit-transition: 0.25s;
-  -moz-transition: 0.25s;
-  -o-transition: 0.25s;
-  transition: 0.25s;
-  -webkit-backface-visibility: hidden;
 
+#save{left:240px;}
+#cancel{background-color:#95a5a6;left:10px;}
 
-}
-#save:hover{
-    
-background-color: #4e6d8d;
-    color: white;
-    -webkit-transition: 0.25s;
-    -moz-transition: 0.25s;
-    -o-transition: 0.25s;
-    transition: 0.25s;
-    -webkit-backface-visibility: hidden;
+.CodeMirror{height:auto;}
 
-
-}
+.CodeMirror-scroll{padding:0;margin:0;}
+.CodeMirror-sizer{height:auto!important;min-height:0!important;font:'';}
