--- a/app/view/enen/admin.jade
+++ b/app/view/enen/admin.jade
@@ -2,6 +2,6 @@ extends layouts/admin
 block content
     input#title
     #editor
-    #markdown
+    #markdown.markdown
     button#save.save Commit Changes
     button#cancel.cancel Cancel
