--- a/app/view/enen/admin.jade
+++ b/app/view/enen/admin.jade
@@ -1,7 +1,7 @@
 extends layouts/admin
 block content
-    input#title
     #editor
+        input#title
+        #codemirror
+
     #markdown.markdown
-    button#save.save Commit Changes
-    button#cancel.cancel Cancel
