--- a/app/view/enen/login.jade
+++ b/app/view/enen/login.jade
@@ -1,9 +1,10 @@
 extends layouts/page
 block content
     div.login
-        p
-            input(placeholder='Username or Email')#username
-        p
-            input(placeholder='Password',type='password')#password
-        p
-            button#submit.save Sign in
+        form( action='/login', method='post' )
+            p
+                input( placeholder='用户名/邮箱', name='username' )#username
+            p
+                input( placeholder='密码', type='password', name='password' )#password
+            p
+                input.save#submit( type='submit', value='登录' )
