--- a/app/view/enen/article.jade
+++ b/app/view/enen/article.jade
@@ -2,5 +2,4 @@ extends layouts/page
 block content
     .central
         h1 #{title}
-        .markdown
-            !{content}
+        .markdown !{content}
