--- a/app/client/gallery/common.less
+++ b/app/client/gallery/common.less
@@ -86,10 +86,10 @@ ol li{
     background: @color1;
 }
 
-
-.save,.cancel{bottom:10px;width:220px;height:45px;color:#fff;border:none;font-size:16.5px;-webkit-transition: 0.25s;-moz-transition: 0.25s;-o-transition: 0.25s;transition: 0.25s;border-radius:6px;}
-
-
-.save{background:@color1;}
-.save:hover{background-color: #ec7063;}
-.save:active{background-color: #dc2d1b;}
+@font-face {
+    font-family: 'EnEn-Web';
+    src: url('/font/enen-web.eot?v=4.0.3');
+    src: url('/font/enen-web.eot?#iefix&v=4.0.3') format('embedded-opentype'), url('/font/enen-web.woff?v=4.0.3') format('woff'), url('/font/enen-web?v=4.0.3') format('truetype'), url('/font/enen-web.svg?v=4.0.3#fontawesomeregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
