--- a/app/view/enen/includes/header.jade
+++ b/app/view/enen/includes/header.jade
@@ -1,8 +1,9 @@
 header#header
     .central
+        #name-logo 嗯嗯
         ul#base-menu
             li
-                a 首页
+                a( href='/' ) 首页
             li
                 a 测试
             li
