--- a/app/view/enen/layouts/dashboard.jade
+++ b/app/view/enen/layouts/dashboard.jade
@@ -3,6 +3,11 @@ html
     body
         #container
             #menu
+                #user
+                    #user-name 一路走红
+                    #user-avatar
+                        img
+                    button.btn.btn-default( type="button" )
                 ul.nav.nav-pills.nav-stacked
                     li.active
                         a( href='javascript:' ) 首页
