--- a/app/client/enen/article/main.less
+++ b/app/client/enen/article/main.less
@@ -1,6 +1,2 @@
 @import "../../gallery/front.less";
-@import "../../gallery/markdown.less";
-
-.markdown{
-    width: 640px;
-}
+@import "../../gallery/article.less";
