--- a/app/client/gallery/markdown.less
+++ b/app/client/gallery/markdown.less
@@ -4,7 +4,7 @@
 .markdown{
 
     font-family: "Arial", "Microsoft YaHei", "Tahoma";
-    padding: 20px 30px;
+    padding: 20px 10px;
     line-height: 20px;
     font-size: 14px;
 
@@ -81,6 +81,13 @@
                 padding: 0 10px;
             }
         }
+    }
+
+    pre{
+        background-color: none;
+        border: 0;
+        margin: 0;
+        padding: 0;
     }
 
     .CodeMirror{
