--- a/app/view/enen/includes/head.jade
+++ b/app/view/enen/includes/head.jade
@@ -1,6 +1,7 @@
 head
     meta( charset='utf-8' )
     title 标题
+    meta( name='viewport', content='width=device-width, initial-scale=1.0' )
     - if( path.slice( 0, 7 ) === '/client' )
         link( rel='stylesheet/less', type='text/css', href='#{path}/main.less' )
         script( type='text/javascript', src='/bower_components/less/dist/less-1.5.1.min.js', charset='utf-8' )
