--- a/app/view/enen/index.jade
+++ b/app/view/enen/index.jade
@@ -1,11 +1,7 @@
 extends layouts/page
 block content
-    .central
-        ul#posts
-            li
-                section
-                    aside
-                    article
-                        header
-                            h2
-                                a 测试
+    .container
+        div 已为您随机加载文章：
+        h1 #{article.title}
+        .article-meta 作者：#{article.author.username}
+        article.markdown !{article.content}
