--- a/app/client/enen/dashboard/main.less
+++ b/app/client/enen/dashboard/main.less
@@ -1,1 +1,24 @@
 @import "../../gallery/dashboard.less";
+@import "../../gallery/markdown.less";
+
+#editor .modal-dialog{
+
+    #editor-title{
+        width: 300px;
+    }
+    
+}
+
+
+#list{
+
+    table{
+        font-size: 12px;
+
+    }
+    
+}
+
+#codemirror{
+    margin-top: 10px;
+}
