--- a/app/view/enen/layouts/dashboard.jade
+++ b/app/view/enen/layouts/dashboard.jade
@@ -3,7 +3,7 @@ html
     body
         block body
         #container
-            #menu.menu-show
+            #menu.menu-hide
                 #user
                     a#menu-toggle
                         i.fa.fa-bars
