--- a/client/gallery/common.less
+++ b/client/gallery/common.less
@@ -1,6 +1,6 @@
 @import "mixin.less";
 @import "fonticons.less";
-@import "/bower_components/bootstrap/dist/css/bootstrap.css";
+@import (less) "/bower_components/bootstrap/dist/css/bootstrap.css";
 
 @color1: #F14E42;
 @color2: #6F6F70;
