--- a/client/gallery/markdown.less
+++ b/client/gallery/markdown.less
@@ -1,5 +1,5 @@
-@import "../../../bower_components/codemirror/lib/codemirror.css";
-@import "../../../bower_components/codemirror/theme/ambiance.css";
+@import (less) "/bower_components/codemirror/lib/codemirror.css";
+@import (less) "/bower_components/codemirror/theme/ambiance.css";
 
 .markdown{
 
