--- a/view/enen/includes/header.jade
+++ b/view/enen/includes/header.jade
@@ -10,7 +10,7 @@ header#header.navbar.navbar-default.navbar-enen.navbar-static-top( role='navigat
         .navbar-collapse.collapse
             ul.nav.navbar-nav
                 li.active
-                    a 测试
+                    a( href='/article' ) 文章
                 li
                     a 测试
                 li
