--- a/view/enen/layouts/dashboard.jade
+++ b/view/enen/layouts/dashboard.jade
@@ -16,13 +16,13 @@ html
                             i.fa.fa-home
                             span 首页
                     li
-                        a( href='javascript:' )
+                        a( href='#{config.dashboard}/article' )
                             i.fa.fa-pencil-square
                             span 文章
                     li
-                        a( href='javascript:' )
+                        a( href='#{config.dashboard}/code' )
                             i.fa.fa-code
-                            span 作品
+                            span 代码
                     li
                         a( href='javascript:' )
                             i.fa.fa-picture-o
