--- a/view/enen/dashboard-includes/code-edit.jade
+++ b/view/enen/dashboard-includes/code-edit.jade
@@ -3,5 +3,5 @@
         input.form-control#edit-title( type='text', ng-model='code.title' )
         #codemirror
     .panel-footer
-        a.btn.btn-default( href='#{config.dashboard}/code' ) 取消
+        a.btn.btn-default( href='#{site.dashboard}/code' ) 取消
         a.btn.btn-primary( ng-click='save( $event )' ) 保存
