--- a/view/enen/dashboard-includes/article-edit.jade
+++ b/view/enen/dashboard-includes/article-edit.jade
@@ -3,5 +3,5 @@
         input.form-control#article-title( type='text', ng-model='article.title' )
         #codemirror
     .panel-footer
-        a.btn.btn-default( href='#{config.dashboard}/article' ) 取消
+        a.btn.btn-default( href='#{site.dashboard}/article' ) 取消
         a.btn.btn-primary( ng-click='save( $event )' ) 保存
